--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,5 +20,5 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  greeting: "Hello"
+  greeting: "Hello %{name}"
   column_select: "Select columns&hellip;"
