--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -23,3 +23,17 @@ en:
     feedback: Feedback
     concept: Concept
     date: Game date
+    ind_term_count: Terms per individual
+    days_for_prep: Days for instructor prep
+    group_option: Group submissions allowed?
+    percent_discount: Percent fewer terms if working in a group
+    group_source: Source of project groups
+    tz_warn: Note: This game occurs in the %{time_zone} timezone and all dates reflect this.
+    response_summary: Student Response Summary
+    resp_challenged: Challenged responses
+    resp_con_expct: Concepts expected
+    resp_term_count: Terms entered
+    resp_con_count: Concepts found
+    resp_perf: Performance
+    game_summary: This class identified %{con_count} unique concepts.
+    not_reviewed: This has not yet been reviewed.
