--- a/config/locales/installments.en.yml
+++ b/config/locales/installments.en.yml
@@ -1,7 +1,15 @@
 en:
   installments:
-    title: Your weekly installment
+    title: How did your group work together?
+    demo_title: How did your group work together? (DEMO)
+    subtitle: Your weekly installment
     submit: Submit Weekly Installment
+    success: Your response was successfully saved
+    err_unknown: Your response could not be recorded
+    demo_success: Your response would have been successfully saved. The demonstration is finished.
+    err_not_member: >
+      You are not a member of this group and therefore are not permitted
+      to submit this installment.
     comment_prompt: Would you like to add additional comments?
     instructions: >
       Please complete this weeks' assessment for group 
