--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -28,7 +28,7 @@ en:
     group_option: Group submissions allowed?
     percent_discount: Percent fewer terms if working in a group
     group_source: Source of project groups
-    tz_warn: Note: This game occurs in the %{time_zone} timezone and all dates reflect this.
+    tz_warn: "Note: This game occurs in the %{time_zone} timezone and all dates reflect this."
     response_summary: Student Response Summary
     resp_challenged: Challenged responses
     resp_con_expct: Concepts expected
