--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -26,7 +26,7 @@ en:
     ind_term_count: Terms per individual
     days_for_prep: Days for instructor prep
     group_option: Group submissions allowed?
-    percent_discount: Percent fewer terms if working in a group
+    group_discount: Percent fewer terms if working in a group
     group_source: Source of project groups
     tz_warn: "Note: This game occurs in the %{time_zone} timezone and all dates reflect this."
     response_summary: Student Response Summary
