--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -29,26 +29,54 @@ en:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
+      no_token: >
+        You can't access this page without coming from a password reset email. If
+        you do come from a password reset email, please make sure you used the
+        full URL provided.
+      send_instructions: >
+        You will receive an email at your primary email address with instructions
+        on how to reset your password in a few minutes. Please log out and use the
+        link in the email to reset your password.
+      send_paranoid_instructions: >
+        If your email address exists in our database, you will receive a password
+        recovery link at your primary email address in a few minutes. When you
+        receive it, be sure to log out before clicking the reset link.
       updated: "Your password has been changed successfully. You are now signed in."
       updated_not_active: "Your password has been changed successfully."
     registrations:
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
+      signed_up_but_inactive: >
+        You have signed up successfully. However, we could not sign you in because your
+        account is not yet activated.
+      signed_up_but_locked: >
+        You have signed up successfully. However, we could not sign you in because your
+        account is locked.
+      signed_up_but_unconfirmed: >
+        A message with a confirmation link has been sent to your email address. Please
+        follow the link to activate your account.
+      update_needs_confirmation: >
+        You updated your account successfully, but we need to verify your new email
+        address. Please check your email and follow the confirm link to confirm your
+        new email address.
       updated: "Your account has been updated successfully."
+      email_added: The new email has successfully been added.
+      email_not_added: >
+        That email address could not be added. Perhaps it is already in use? Please 
+        contact support for assistance.
+      email_destroyed: That email address was completely removed from our records.
+      set_primary: Your primary email address has been set.
     sessions:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
+      send_instructions: >
+        You will receive an email with instructions for how to unlock your account
+        in a few minutes.
+      send_paranoid_instructions: >
+        If your account exists, you will receive an email with instructions for how
+        to unlock it in a few minutes.
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
   errors:
     messages:
