--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -23,23 +23,36 @@ en:
   title: CoLab
   column_select: Show/Hide columns&hellip;
   task_name: Task Name
+  email: Email
+  email_redacted: [email redacted]
   status: Status
   course_name: Course Name
   student: Student
   group: Group
+  groups: Groups
+  dates: Dates
   open_date: Open Date
   start_date: Start Date
   close_date: Close Date
+  start_dow: Start DOW
+  end_dow: End DOW
   end_date: End Date
+  task_view: Task View
+  month_view: Month View
+  week_view: Week View
+  activities: Activities
   consent_form: Consent Form
   actions: Actions
-  activate: Activate
+  activate: Activate?
   back: Back
+  next: Next
+  note: Note
   show: Show
   edit: Edit
   save: Save
-  profile: Profile
+  submit: Submit
   #toolbar
+  profile: Profile
   c_panel: Admin&hellip;
   reports: Reports
   administration: Administration
@@ -47,35 +60,73 @@ en:
   resp_data: Response Data
   coming_soon: Coming soon!
   logout: Logout
+  login: login
+  none_selected: None selected
+  not_available: Not Available
   #demo materials
   demo: Demo
   demo_group: SuperStars
   demo_project: Research Paper
+  demo_course_name: Advanced Collaborative Research
+  #admin functions
   about: About
+  back_to_course: Back to course
+  back_to_courses: Back to the list of courses
   support: Support
+  avail_body: >
+    The %{activity_name} is now available for you on %{site_link}. Please
+    %{login_link} at your earliest convenience to have a look and complete
+    it.
+  course_invite_body:
+    one: "You've been invited to participate in the following course:"
+    other: "You've been invited to participate in the following %{count} courses:"
+  course_invite_close: Please log in to %{site_link} accept or decline this enrollment.
+  reminder_body: >
+    This email is to serve as a friendly reminder that you have an open
+    task waiting for you at this time. Please login to %{site_link} at your
+    earliest convenience to complete what is available.
+  summary_body: >
+    Below is your students' completion report from the task %{task_name} in the
+    course %{course_name} which recently completed at %{site_link}.
+  enrolled_student:
+    one: There is only one student enrolled in the course.
+    other: There are %{count} students enrolled in the course.
+  email_close: Thank you!
+  support_formal: CoLab Support
   demo_surname_1: John
   demo_fam_name_1: Smith
   demo_user_tz: Seoul
-  #admin functions
   destroy: Destroy
+  remove: Remove
   confirmation: Are you sure?
   accept: Accept
   decline: Decline
   waiting: Waiting
   project: Project
   complete: Completed
+  completed_at: Completed at
   incomplete: In Progress
   not_started: Not Started
   n_a: N/A
+  not_given: <not given>
+  not_set: Not set
   instructors: Instructors
   students: Students
+  student: Student
   projects: Projects
-  experiences: Experiences
+  no_projects: No projects
+  exps: Experiences
   terms_lists: Terms Lists
   courses: Courses
+  course: Course
+  school: School
+  active: Active
+  inactive: Inactive
   details: Details
   description: Description
   name: Name
+  family_name: Family Name
+  given_name: Given Name
   number: Number
   member: Team Member
   titles:
@@ -85,12 +136,16 @@ en:
     your_tasks: Your Tasks
     invited: You've been invited!
     greeting: Hello %{name}
+    greeting_unknown: Hello!
     instructor_tasks: Instructor Tasks
     student_tasks: Tasks for Class
     task_type: Task Type
     sapa: Self- and Peer-Assessment
     terms_list: Terms list submission
-    course_confirm: You've been added to %{course_list_text}, but sometimes instructors make mistakes, so please do confirm that you are actually enrolled in %{proper_course_list} listed below
+    course_confirm: >
+      You've been added to %{course_list_text}, but sometimes instructors make
+      mistakes, so please do confirm that you are actually enrolled in
+      %{proper_course_list} listed below
     courses: 
       one: a course
       other: '%{count} courses'
