--- a/config/locales/projects.en.yml
+++ b/config/locales/projects.en.yml
@@ -12,8 +12,17 @@ en:
     tz_warn: This project occurs in the %{time_zone} time zone and all dates reflect this.
     opens: Opens every
     no_group: no group
+    rescore: rescore
     new_group: New group name
     closes: Closes every
+    groups_intro: >
+      This project currently contains %{group_count} groups as specified below. Their
+      respective diversity scores are listed below their names. You may recalculate
+      any or all of those diversity scores.
+    diversity_calculated: Diversity score calculated based on current data.
+    diversities_calculated: Diversity scores calculated based on current data.
+    recalculate_diversities: Calculate all diversity scores!
+    wrong_group: The specified group is not in this project.
     show:
       title: Project Details
     edit:
@@ -28,3 +37,5 @@ en:
       title: List of Projects
     new:
       title: New Project
+    projects: Projects
+    diversity_scores: Diversity scores
