--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -47,6 +47,7 @@ en:
       signup: Sign up
       account_info: Enter your account information
       current_uni: Which university are you currently at?
+      hometown: Where did you spend most of your time growing up?
       current_tz: What time zone are you in?
       choose_lang: Please choose a language
       lang_quest: What language will you use?
