--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -36,6 +36,8 @@ en:
   group: Group
   groups: Groups
   group_names: Group names
+  history: History
+  about_you: About You
   dates: Dates
   open_date: Open Date
   start_date: Start Date
