Adding diversity scores into the interface

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -38,8 +38,7 @@ en:
   group_names: Group names
   history: History
   about_you: About You
-  your_info: Your Info
-  calc_diversity: Diversity worksheet&hellip;
+  calc_diversity: Diversity
   dates: Dates
   open_date: Open Date
   start_date: Start Date
