--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -39,6 +39,11 @@ en:
   history: History
   about_you: About You
   calc_diversity: Diversity
+  users: Users
+  diversity_score: Diversity Score
+  calc_diversity_sub: Tell me the score!
+  calc_it: Calculate a Diversity Score
+  ds_emails_lbl: Enter the emails of the proposed team members
   dates: Dates
   open_date: Open Date
   start_date: Start Date
