Beginning implementation of discussion boards

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -73,6 +73,7 @@ en:
   profile: Profile
   c_panel: Admin&hellip;
   reports: Reports
+  forums: Forums
   administration: Administration
   resp_summ: Response Summary
   resp_data: Response Data
