cleaned up consent

--- a/config/locales/consent_logs.en.yml
+++ b/config/locales/consent_logs.en.yml
@@ -14,3 +14,4 @@ en:
         marked "I Agree" below.  You can return to this document at any time to
         change your response.
       submit_response: Record my response to this Consent Form
+      consent_dl: Download a Copy of this Document
