--- a/config/locales/consent_forms.en.yml
+++ b/config/locales/consent_forms.en.yml
@@ -16,4 +16,7 @@ en:
       form_text: >
         The text below will be presented to all potential study
         participants. Please use basic html to format your text.
+      date_summ: >
+        This consent form applies between <strong>%{start_date}</strong> and 
+        <strong>%{end_date}</strong>.
 
