--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -140,6 +140,7 @@ en:
   inactive: Inactive
   details: Details
   description: Description
+  form: For
   name: Name
   family_name: Family Name
   given_name: Given Name
