making bingo marking more informative

--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -2,6 +2,7 @@ en:
   bingo_games:
     review_candidates:
       title: Candidate Terms for Review
+      submitted_by: Submitted by
     index:
       title: List of Bingo! Games
     edit:
