working on some UI fixes

--- a/config/locales/candidates.en.yml
+++ b/config/locales/candidates.en.yml
@@ -24,7 +24,7 @@ en:
     term: Term
     terms: Terms
     grp_sum_msg: >
-      You and your group, %{{grp_name}, identified the following terms, resulting 
+      You and your group, %{grp_name}, identified the following terms, resulting 
       in %{con_count} unique concepts
     list_stats:
       title: Candidate list stats
@@ -38,8 +38,8 @@ en:
         provide the definitions in your own words.
       behalf: on behalf of 
       waiting: Still awaiting a response to your group help request
-      req_rec: Your team wants to collaborate
-      req_help: Invite your group to help?
+      req_rec: Your teammates in %{grp_name} want to collaborate
+      req_help: Invite your teammates in %{grp_name} to help?
       confirm_accept: Are you sure? Did you save your changes? This cannot be undone.
       confirm_decline: Are you sure? Did you save your changes?
       dup: Possible Duplicate
