optimizations in place

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -138,6 +138,8 @@ en:
   no_projects: No projects
   exps: Experiences
   terms_lists: Terms Lists
+  terms_list: Terms List
+  terms_review: Terms Review
   course: Course
   school: School
   active: Active
