exploding comment window

--- a/config/locales/graphing.en.yml
+++ b/config/locales/graphing.en.yml
@@ -28,6 +28,7 @@ en:
     g_ag_m: Agreement by Member
     low: Low
     high: High
+    click_for_more: Click for Easy Viewing
     index:
       who: Who would you like to see?
       what_data: What data would you like to see?
