--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -67,6 +67,13 @@ en:
         one: You've been involved in the following course.
         other: You've been involved in the following %{count} courses.
       hometown: Where did you spend most of your time growing up?
+      impairments: >
+        Do you have any impairments which alter your perspective?
+      impairment_visual: Visual
+      impairment_auditory: Auditory
+      impairment_motor: Motor
+      impairment_cognitive: Cognitive
+      impairment_other: Other
       account_info: Enter your account information
       tell_about: Tell us about yourself
       tell_about_personalized: "Tell us about yourself, %{name}"
