--- a/config/locales/courses.en.yml
+++ b/config/locales/courses.en.yml
@@ -2,6 +2,10 @@ en:
   courses:
     index:
       title: List of Courses
+      submit_copy: Copy this Course
+      copy_new_start: When will this new course start?
+      original_date: Existing course date
+      copy_new_start_lbl: New course start date?
     edit:
       title: Edit Course Details
     show:
