--- a/config/locales/courses.en.yml
+++ b/config/locales/courses.en.yml
@@ -24,7 +24,7 @@ en:
     destroy_success: Course destroyed successfully!
     update_success: Course updated successfully!
     copy_success: Course successfully copied!
-    copy_success: >
+    copy_fail: >
       The course was not successfully copied. Contact Support.
     instructor_invited: Instructor(s) have been invited.
     students_invited: Student(s) have been invited.
