--- a/config/locales/courses.en.yml
+++ b/config/locales/courses.en.yml
@@ -26,8 +26,12 @@ en:
     copy_success: Course successfully copied!
     copy_fail: >
       The course was not successfully copied. Contact Support.
-    instructor_invited: Instructor(s) have been invited.
-    students_invited: Student(s) have been invited.
+    instructor_invited:
+      one: One instructor has been invited.
+      other: "%{count} instructors have been invited."
+    students_invited:
+      one: One student has been invited.
+      other: "%{count} students have been invited."
     accept_fail: You can only accept your own enrollments
     decline_fail: You can only decline your own enrollments
     permission_fail: You are not permitted to make that sort of change.
