consent form presentation is functioning

--- a/config/locales/consent_forms.en.yml
+++ b/config/locales/consent_forms.en.yml
@@ -4,6 +4,7 @@ en:
     title: Update Consent Response
     multiple: Research Participation
     not_for_research: Not for Research
+    consent_form: Research Consent Form
     edit:
       title: Consent Form
     index:
