making demographics optional

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -75,7 +75,7 @@ en:
       impairment_cognitive: Cognitive
       impairment_other: Other
       account_info: Enter your account information
-      tell_about: Tell us about yourself
+      tell_about: Tell us about yourself (optional)
       tell_about_personalized: "Tell us about yourself, %{name}"
       activity_history: History of Activities in Which You've Taken Part
       no_activities: No activities yet
