making demographics optional

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -76,7 +76,8 @@ en:
       impairment_other: Other
       account_info: Enter your account information
       tell_about: Tell us about yourself (optional)
-      tell_about_personalized: "Tell us about yourself, %{name}"
+      tell_about_personalized: >
+        Tell us about yourself, %{name} (optional)
       activity_history: History of Activities in Which You've Taken Part
       no_activities: No activities yet
       disp_stgs: Display Settings
